src/objects/X3_0_Bushenyi_Cassava__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_fresh_Cassava_at_retail_price__c</fullName>
        <label>A Kg of fresh Cassava at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_fresh_Cassava_at_wholesale_pric__c</fullName>
        <label>A Kg of fresh Cassava at wholesale pric</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_Cassava__c</fullName>
        <label>Name of trader in Cassava</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Bushenyi__c</fullName>
        <label>3.0 Market Bushenyi</label>
        <referenceTo>Market_Bushenyi__c</referenceTo>
        <relationshipLabel>3.0 Bushenyi Cassavas</relationshipLabel>
        <relationshipName>X3_0_Bushenyi_Cassavas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Bushenyi Cassava</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>3.0 Masindi Cassava Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Bushenyi Cassavas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>